--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>T-shirt Shop</title>
+   <meta charset="UTF-8">
+   <title>Theory</title>
+
 </head>
 <body>
-    <div class="container">
-        <header>
-            <button class="basket btn" type="button">Корзина</button>
-        </header>
-        <main>
-            <div class="products-list"></div>
-        </main>
-        <script src="script.js"></script>
-    </div>
+   <h1>Theory</h1>
+   <h2>lesson 4</h2>
+   <script src="script.js"></script>
 </body>
 </html>
